deploayments/api-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dashboard
  namespace: traefik
  labels:
    app: api-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-dashboard
  template:
    metadata:
      labels:
        app: api-dashboard
    spec:
      containers:
        - name: api-dashboard
          image: flou21/api-dashboard:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-dashboard 
  namespace: traefik
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: api-dashboard
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api-dashboard.flou21.de`)
      kind: Rule
      services:
        - name: api-dashboard
          port: 80
